--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pre-commit": "1.2.2"
   },
   "dependencies": {
-    "commander": "5.1.0"
+    "commander": "5.1.0",
+    "date-fns": "2.14.0"
   }
 }
