--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pre-commit": "1.2.2"
   },
   "dependencies": {
-    "commander": "5.1.0",
+    "chalk": "4.0.0",
+    "sywac": "1.3.0",
     "date-fns": "2.14.0"
   }
 }
