--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/service/service.js",
     "test": "npm run eslint",
     "eslint": "eslint --fix --ext .js src/",
-    "server": "nodemon ./src/service/service.js --server"
+    "server": "nodemon ./src/service/service.js --server",
+    "start-front-server": "nodemon ./src/express/index.js"
   },
   "pre-commit": [
     "test"
@@ -31,6 +32,7 @@
   "dependencies": {
     "chalk": "4.0.0",
     "sywac": "1.3.0",
+    "express": "4.17.1",
     "http-status-codes": "1.4.0",
     "date-fns": "2.14.0"
   }
