--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run eslint",
     "eslint": "eslint --fix --ext .js src/",
     "server": "nodemon ./src/service/service.js --server",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start-front-server": "nodemon ./src/express/server.js"
   },
   "pre-commit": [
     "test"
