--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   },
   "dependencies": {
     "chalk": "4.0.0",
-    "sywac": "1.3.0",
+    "date-fns": "2.14.0",
     "express": "4.17.1",
     "http-status-codes": "1.4.0",
-    "date-fns": "2.14.0"
+    "pug": "3.0.0",
+    "sywac": "1.3.0"
   }
 }
