--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "2.14.0",
     "express": "4.17.1",
     "http-status-codes": "1.4.0",
+    "nanoid": "3.1.10",
     "pug": "3.0.0",
     "sywac": "1.3.0"
   }
